v4/y.output
Terminals unused in grammar

   IMPORT
   JNULL
   NEW
   OPERATOR
   OP_DIM
   ASS_AND
   ASS_OR
   '~'


Grammar

    0 $accept: ProgramFile $end

    1 TypeSpecifier: TypeName

    2 TypeName: BOOLEAN
    3         | CHAR
    4         | BYTE
    5         | SHORT
    6         | INT
    7         | LONG
    8         | FLOAT
    9         | DOUBLE
   10         | VOID
   11         | STRING
   12         | STRING '[' ']'

   13 ProgramFile: ClassHeader '{' FieldDeclarations '}'

   14 ClassHeader: PUBLIC CLASS ID
   15            | CLASS ID

   16 FieldDeclarations: FieldDeclaration
   17                  | FieldDeclarations FieldDeclaration

   18 FieldDeclaration: AttrDeclaration ';'
   19                 | MethodDeclaration

   20 AttrDeclaration: PUBLIC STATIC TypeSpecifier VariableDeclarators
   21                | STATIC TypeSpecifier VariableDeclarators

   22 VariableDeclarators: VariableDeclarator
   23                    | VariableDeclarators ',' VariableDeclarator

   24 VariableDeclarator: ID
   25                   | ID '=' Expression

   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator Block
   27                  | STATIC TypeSpecifier MethodDeclarator Block

   28 MethodDeclarator: ID '(' ParameterList ')'
   29                 | ID '(' ')'

   30 ParameterList: Parameter
   31              | ParameterList ',' Parameter

   32 Parameter: TypeSpecifier ID

   33 Block: '{' LocalVariableDeclarationsAndStatements '}'
   34      | '{' '}'

   35 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
   36                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

   37 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
   38                                    | Statement

   39 LocalVariableDeclarationStatement: TypeSpecifier VariableDeclarators ';'

   40 Statement: LabeledStatement
   41          | Expression ';'
   42          | SelectionStatement
   43          | IterationStatement
   44          | JumpStatement
   45          | Block
   46          | ';'

   47 LabeledStatement: ID ':' LocalVariableDeclarationOrStatement
   48                 | CASE ConditionalExpression ':' LocalVariableDeclarationOrStatement
   49                 | DEFAULT ':' LocalVariableDeclarationOrStatement

   50 SelectionStatement: IF '(' Expression ')' Statement ELSE Statement
   51                   | IF '(' Expression ')' Statement
   52                   | SWITCH '(' Expression ')' Block

   53 IterationStatement: WHILE '(' Expression ')' Statement
   54                   | DO Statement WHILE '(' Expression ')' ';'
   55                   | FOR '(' ForInit ForExpr Expressions ')' Statement
   56                   | FOR '(' ForInit ForExpr ')' Statement

   57 ForInit: Expressions ';'
   58        | LocalVariableDeclarationStatement
   59        | ';'

   60 ForExpr: ConditionalExpression ';'
   61        | AssignmentExpression ';'
   62        | '(' Expression ')' ';'
   63        | ';'

   64 Expressions: Expression
   65            | Expressions ',' Expression

   66 JumpStatement: BREAK ID ';'
   67              | BREAK ';'
   68              | CONTINUE ID ';'
   69              | CONTINUE ';'
   70              | RETURN Expression ';'
   71              | RETURN ';'

   72 MethodCall: ID '(' Expressions ')'
   73           | ID '(' ')'

   74 UnaryExpression: OP_INC BasicElement
   75                | OP_DEC BasicElement
   76                | BasicElement OP_INC
   77                | BasicElement OP_DEC
   78                | BasicElement
   79                | '!' BasicElement

   80 BasicElement: LITERAL
   81             | MethodCall
   82             | ID

   83 CastExpression: UnaryExpression
   84               | '(' TypeSpecifier ')' UnaryExpression
   85               | '(' TypeSpecifier ')' '(' AssignmentExpression ')'
   86               | '(' TypeSpecifier ')' '(' ConditionalExpression ')'

   87 ArithmeticExpression: CastExpression
   88                     | ArithmeticExpression '+' ArithmeticExpression
   89                     | ArithmeticExpression '-' ArithmeticExpression
   90                     | ArithmeticExpression '/' ArithmeticExpression
   91                     | ArithmeticExpression '*' ArithmeticExpression
   92                     | ArithmeticExpression '%' ArithmeticExpression
   93                     | ArithmeticExpression OP_SHL ArithmeticExpression
   94                     | ArithmeticExpression OP_SHR ArithmeticExpression

   95 RelationalExpression: ArithmeticExpression
   96                     | ArithmeticExpression '<' RelationalExpression
   97                     | ArithmeticExpression '>' RelationalExpression
   98                     | ArithmeticExpression OP_LESS_EQUAL RelationalExpression
   99                     | ArithmeticExpression OP_GREATER_EQUAL RelationalExpression
  100                     | ArithmeticExpression OP_EQUAL RelationalExpression
  101                     | ArithmeticExpression OP_DIFFERENT RelationalExpression
  102                     | ArithmeticExpression '&' RelationalExpression
  103                     | ArithmeticExpression '^' RelationalExpression
  104                     | ArithmeticExpression '|' RelationalExpression
  105                     | ArithmeticExpression OP_AND RelationalExpression
  106                     | ArithmeticExpression OP_OR RelationalExpression

  107 Expression: ConditionalExpression
  108           | AssignmentExpression
  109           | '(' Expression ')'

  110 ConditionalExpression: RelationalExpression
  111                      | '!' '(' RelationalExpression ')'
  112                      | RelationalExpression '?' Expression ':' Expression

  113 AssignmentExpression: ID '=' Expression
  114                     | ID ASS_MUL Expression
  115                     | ID ASS_DIV Expression
  116                     | ID ASS_ADD Expression
  117                     | ID ASS_SUB Expression
  118                     | ID ASS_XOR Expression
  119                     | ID ASS_MOD Expression
  120                     | ID ASS_SHL Expression
  121                     | ID ASS_SHR Expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 79 111
'%' (37) 92
'&' (38) 102
'(' (40) 28 29 50 51 52 53 54 55 56 62 72 73 84 85 86 109 111
')' (41) 28 29 50 51 52 53 54 55 56 62 72 73 84 85 86 109 111
'*' (42) 91
'+' (43) 88
',' (44) 23 31 65
'-' (45) 89
'/' (47) 90
':' (58) 47 48 49 112
';' (59) 18 39 41 46 54 57 59 60 61 62 63 66 67 68 69 70 71
'<' (60) 96
'=' (61) 25 113
'>' (62) 97
'?' (63) 112
'[' (91) 12
']' (93) 12
'^' (94) 103
'{' (123) 13 33 34
'|' (124) 104
'}' (125) 13 33 34
'~' (126)
error (256)
BOOLEAN (258) 2
BREAK (259) 66 67
BYTE (260) 4
CASE (261) 48
CHAR (262) 3
CLASS (263) 14 15
CONTINUE (264) 68 69
DEFAULT (265) 49
DO (266) 54
DOUBLE (267) 9
ELSE (268) 50
FLOAT (269) 8
FOR (270) 55 56
IF (271) 50 51
IMPORT (272)
INT (273) 6
JNULL (274)
LONG (275) 7
NEW (276)
OPERATOR (277)
PUBLIC (278) 14 20 26
RETURN (279) 70 71
SHORT (280) 5
STATIC (281) 20 21 26 27
STRING (282) 11 12
SWITCH (283) 52
VOID (284) 10
WHILE (285) 53 54
OP_INC (286) 74 76
OP_DEC (287) 75 77
OP_SHL (288) 93
OP_SHR (289) 94
OP_GREATER_EQUAL (290) 99
OP_LESS_EQUAL (291) 98
OP_EQUAL (292) 100
OP_DIFFERENT (293) 101
OP_AND (294) 105
OP_OR (295) 106
OP_DIM (296)
ASS_MUL (297) 114
ASS_DIV (298) 115
ASS_ADD (299) 116
ASS_SUB (300) 117
ASS_XOR (301) 118
ASS_MOD (302) 119
ASS_SHL (303) 120
ASS_SHR (304) 121
ASS_AND (305)
ASS_OR (306)
ID (307) 14 15 24 25 28 29 32 47 66 68 72 73 82 113 114 115 116 117
    118 119 120 121
LITERAL (308) 80


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
TypeSpecifier (78)
    on left: 1, on right: 20 21 26 27 32 39 84 85 86
TypeName (79)
    on left: 2 3 4 5 6 7 8 9 10 11 12, on right: 1
ProgramFile (80)
    on left: 13, on right: 0
ClassHeader (81)
    on left: 14 15, on right: 13
FieldDeclarations (82)
    on left: 16 17, on right: 13 17
FieldDeclaration (83)
    on left: 18 19, on right: 16 17
AttrDeclaration (84)
    on left: 20 21, on right: 18
VariableDeclarators (85)
    on left: 22 23, on right: 20 21 23 39
VariableDeclarator (86)
    on left: 24 25, on right: 22 23
MethodDeclaration (87)
    on left: 26 27, on right: 19
MethodDeclarator (88)
    on left: 28 29, on right: 26 27
ParameterList (89)
    on left: 30 31, on right: 28 31
Parameter (90)
    on left: 32, on right: 30 31
Block (91)
    on left: 33 34, on right: 26 27 45 52
LocalVariableDeclarationsAndStatements (92)
    on left: 35 36, on right: 33 36
LocalVariableDeclarationOrStatement (93)
    on left: 37 38, on right: 35 36 47 48 49
LocalVariableDeclarationStatement (94)
    on left: 39, on right: 37 58
Statement (95)
    on left: 40 41 42 43 44 45 46, on right: 38 50 51 53 54 55 56
LabeledStatement (96)
    on left: 47 48 49, on right: 40
SelectionStatement (97)
    on left: 50 51 52, on right: 42
IterationStatement (98)
    on left: 53 54 55 56, on right: 43
ForInit (99)
    on left: 57 58 59, on right: 55 56
ForExpr (100)
    on left: 60 61 62 63, on right: 55 56
Expressions (101)
    on left: 64 65, on right: 55 57 65 72
JumpStatement (102)
    on left: 66 67 68 69 70 71, on right: 44
MethodCall (103)
    on left: 72 73, on right: 81
UnaryExpression (104)
    on left: 74 75 76 77 78 79, on right: 83 84
BasicElement (105)
    on left: 80 81 82, on right: 74 75 76 77 78 79
CastExpression (106)
    on left: 83 84 85 86, on right: 87
ArithmeticExpression (107)
    on left: 87 88 89 90 91 92 93 94, on right: 88 89 90 91 92 93 94
    95 96 97 98 99 100 101 102 103 104 105 106
RelationalExpression (108)
    on left: 95 96 97 98 99 100 101 102 103 104 105 106, on right:
    96 97 98 99 100 101 102 103 104 105 106 110 111 112
Expression (109)
    on left: 107 108 109, on right: 25 41 50 51 52 53 54 62 64 65 70
    109 112 113 114 115 116 117 118 119 120 121
ConditionalExpression (110)
    on left: 110 111 112, on right: 48 60 86 107
AssignmentExpression (111)
    on left: 113 114 115 116 117 118 119 120 121, on right: 61 85 108


state 0

    0 $accept: . ProgramFile $end

    CLASS   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    ProgramFile  go to state 3
    ClassHeader  go to state 4


state 1

   15 ClassHeader: CLASS . ID

    ID  shift, and go to state 5


state 2

   14 ClassHeader: PUBLIC . CLASS ID

    CLASS  shift, and go to state 6


state 3

    0 $accept: ProgramFile . $end

    $end  shift, and go to state 7


state 4

   13 ProgramFile: ClassHeader . '{' FieldDeclarations '}'

    '{'  shift, and go to state 8


state 5

   15 ClassHeader: CLASS ID .

    $default  reduce using rule 15 (ClassHeader)


state 6

   14 ClassHeader: PUBLIC CLASS . ID

    ID  shift, and go to state 9


state 7

    0 $accept: ProgramFile $end .

    $default  accept


state 8

   13 ProgramFile: ClassHeader '{' . FieldDeclarations '}'

    PUBLIC  shift, and go to state 10
    STATIC  shift, and go to state 11

    FieldDeclarations  go to state 12
    FieldDeclaration   go to state 13
    AttrDeclaration    go to state 14
    MethodDeclaration  go to state 15


state 9

   14 ClassHeader: PUBLIC CLASS ID .

    $default  reduce using rule 14 (ClassHeader)


state 10

   20 AttrDeclaration: PUBLIC . STATIC TypeSpecifier VariableDeclarators
   26 MethodDeclaration: PUBLIC . STATIC TypeSpecifier MethodDeclarator Block

    STATIC  shift, and go to state 16


state 11

   21 AttrDeclaration: STATIC . TypeSpecifier VariableDeclarators
   27 MethodDeclaration: STATIC . TypeSpecifier MethodDeclarator Block

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26

    TypeSpecifier  go to state 27
    TypeName       go to state 28


state 12

   13 ProgramFile: ClassHeader '{' FieldDeclarations . '}'
   17 FieldDeclarations: FieldDeclarations . FieldDeclaration

    PUBLIC  shift, and go to state 10
    STATIC  shift, and go to state 11
    '}'     shift, and go to state 29

    FieldDeclaration   go to state 30
    AttrDeclaration    go to state 14
    MethodDeclaration  go to state 15


state 13

   16 FieldDeclarations: FieldDeclaration .

    $default  reduce using rule 16 (FieldDeclarations)


state 14

   18 FieldDeclaration: AttrDeclaration . ';'

    ';'  shift, and go to state 31


state 15

   19 FieldDeclaration: MethodDeclaration .

    $default  reduce using rule 19 (FieldDeclaration)


state 16

   20 AttrDeclaration: PUBLIC STATIC . TypeSpecifier VariableDeclarators
   26 MethodDeclaration: PUBLIC STATIC . TypeSpecifier MethodDeclarator Block

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26

    TypeSpecifier  go to state 32
    TypeName       go to state 28


state 17

    2 TypeName: BOOLEAN .

    $default  reduce using rule 2 (TypeName)


state 18

    4 TypeName: BYTE .

    $default  reduce using rule 4 (TypeName)


state 19

    3 TypeName: CHAR .

    $default  reduce using rule 3 (TypeName)


state 20

    9 TypeName: DOUBLE .

    $default  reduce using rule 9 (TypeName)


state 21

    8 TypeName: FLOAT .

    $default  reduce using rule 8 (TypeName)


state 22

    6 TypeName: INT .

    $default  reduce using rule 6 (TypeName)


state 23

    7 TypeName: LONG .

    $default  reduce using rule 7 (TypeName)


state 24

    5 TypeName: SHORT .

    $default  reduce using rule 5 (TypeName)


state 25

   11 TypeName: STRING .
   12         | STRING . '[' ']'

    '['  shift, and go to state 33

    $default  reduce using rule 11 (TypeName)


state 26

   10 TypeName: VOID .

    $default  reduce using rule 10 (TypeName)


state 27

   21 AttrDeclaration: STATIC TypeSpecifier . VariableDeclarators
   27 MethodDeclaration: STATIC TypeSpecifier . MethodDeclarator Block

    ID  shift, and go to state 34

    VariableDeclarators  go to state 35
    VariableDeclarator   go to state 36
    MethodDeclarator     go to state 37


state 28

    1 TypeSpecifier: TypeName .

    $default  reduce using rule 1 (TypeSpecifier)


state 29

   13 ProgramFile: ClassHeader '{' FieldDeclarations '}' .

    $default  reduce using rule 13 (ProgramFile)


state 30

   17 FieldDeclarations: FieldDeclarations FieldDeclaration .

    $default  reduce using rule 17 (FieldDeclarations)


state 31

   18 FieldDeclaration: AttrDeclaration ';' .

    $default  reduce using rule 18 (FieldDeclaration)


state 32

   20 AttrDeclaration: PUBLIC STATIC TypeSpecifier . VariableDeclarators
   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier . MethodDeclarator Block

    ID  shift, and go to state 34

    VariableDeclarators  go to state 38
    VariableDeclarator   go to state 36
    MethodDeclarator     go to state 39


state 33

   12 TypeName: STRING '[' . ']'

    ']'  shift, and go to state 40


state 34

   24 VariableDeclarator: ID .
   25                   | ID . '=' Expression
   28 MethodDeclarator: ID . '(' ParameterList ')'
   29                 | ID . '(' ')'

    '='  shift, and go to state 41
    '('  shift, and go to state 42

    $default  reduce using rule 24 (VariableDeclarator)


state 35

   21 AttrDeclaration: STATIC TypeSpecifier VariableDeclarators .
   23 VariableDeclarators: VariableDeclarators . ',' VariableDeclarator

    ','  shift, and go to state 43

    $default  reduce using rule 21 (AttrDeclaration)


state 36

   22 VariableDeclarators: VariableDeclarator .

    $default  reduce using rule 22 (VariableDeclarators)


state 37

   27 MethodDeclaration: STATIC TypeSpecifier MethodDeclarator . Block

    '{'  shift, and go to state 44

    Block  go to state 45


state 38

   20 AttrDeclaration: PUBLIC STATIC TypeSpecifier VariableDeclarators .
   23 VariableDeclarators: VariableDeclarators . ',' VariableDeclarator

    ','  shift, and go to state 43

    $default  reduce using rule 20 (AttrDeclaration)


state 39

   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator . Block

    '{'  shift, and go to state 44

    Block  go to state 46


state 40

   12 TypeName: STRING '[' ']' .

    $default  reduce using rule 12 (TypeName)


state 41

   25 VariableDeclarator: ID '=' . Expression

    OP_INC   shift, and go to state 47
    OP_DEC   shift, and go to state 48
    ID       shift, and go to state 49
    LITERAL  shift, and go to state 50
    '('      shift, and go to state 51
    '!'      shift, and go to state 52

    MethodCall             go to state 53
    UnaryExpression        go to state 54
    BasicElement           go to state 55
    CastExpression         go to state 56
    ArithmeticExpression   go to state 57
    RelationalExpression   go to state 58
    Expression             go to state 59
    ConditionalExpression  go to state 60
    AssignmentExpression   go to state 61


state 42

   28 MethodDeclarator: ID '(' . ParameterList ')'
   29                 | ID '(' . ')'

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26
    ')'      shift, and go to state 62

    TypeSpecifier  go to state 63
    TypeName       go to state 28
    ParameterList  go to state 64
    Parameter      go to state 65


state 43

   23 VariableDeclarators: VariableDeclarators ',' . VariableDeclarator

    ID  shift, and go to state 66

    VariableDeclarator  go to state 67


state 44

   33 Block: '{' . LocalVariableDeclarationsAndStatements '}'
   34      | '{' . '}'

    BOOLEAN   shift, and go to state 17
    BREAK     shift, and go to state 68
    BYTE      shift, and go to state 18
    CASE      shift, and go to state 69
    CHAR      shift, and go to state 19
    CONTINUE  shift, and go to state 70
    DEFAULT   shift, and go to state 71
    DO        shift, and go to state 72
    DOUBLE    shift, and go to state 20
    FLOAT     shift, and go to state 21
    FOR       shift, and go to state 73
    IF        shift, and go to state 74
    INT       shift, and go to state 22
    LONG      shift, and go to state 23
    RETURN    shift, and go to state 75
    SHORT     shift, and go to state 24
    STRING    shift, and go to state 25
    SWITCH    shift, and go to state 76
    VOID      shift, and go to state 26
    WHILE     shift, and go to state 77
    OP_INC    shift, and go to state 47
    OP_DEC    shift, and go to state 48
    ID        shift, and go to state 78
    LITERAL   shift, and go to state 50
    '('       shift, and go to state 51
    '!'       shift, and go to state 52
    '{'       shift, and go to state 44
    '}'       shift, and go to state 79
    ';'       shift, and go to state 80

    TypeSpecifier                           go to state 81
    TypeName                                go to state 28
    Block                                   go to state 82
    LocalVariableDeclarationsAndStatements  go to state 83
    LocalVariableDeclarationOrStatement     go to state 84
    LocalVariableDeclarationStatement       go to state 85
    Statement                               go to state 86
    LabeledStatement                        go to state 87
    SelectionStatement                      go to state 88
    IterationStatement                      go to state 89
    JumpStatement                           go to state 90
    MethodCall                              go to state 53
    UnaryExpression                         go to state 54
    BasicElement                            go to state 55
    CastExpression                          go to state 56
    ArithmeticExpression                    go to state 57
    RelationalExpression                    go to state 58
    Expression                              go to state 91
    ConditionalExpression                   go to state 60
    AssignmentExpression                    go to state 61


state 45

   27 MethodDeclaration: STATIC TypeSpecifier MethodDeclarator Block .

    $default  reduce using rule 27 (MethodDeclaration)


state 46

   26 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator Block .

    $default  reduce using rule 26 (MethodDeclaration)


state 47

   74 UnaryExpression: OP_INC . BasicElement

    ID       shift, and go to state 92
    LITERAL  shift, and go to state 50

    MethodCall    go to state 53
    BasicElement  go to state 93


state 48

   75 UnaryExpression: OP_DEC . BasicElement

    ID       shift, and go to state 92
    LITERAL  shift, and go to state 50

    MethodCall    go to state 53
    BasicElement  go to state 94


state 49

   72 MethodCall: ID . '(' Expressions ')'
   73           | ID . '(' ')'
   82 BasicElement: ID .
  113 AssignmentExpression: ID . '=' Expression
  114                     | ID . ASS_MUL Expression
  115                     | ID . ASS_DIV Expression
  116                     | ID . ASS_ADD Expression
  117                     | ID . ASS_SUB Expression
  118                     | ID . ASS_XOR Expression
  119                     | ID . ASS_MOD Expression
  120                     | ID . ASS_SHL Expression
  121                     | ID . ASS_SHR Expression

    ASS_MUL  shift, and go to state 95
    ASS_DIV  shift, and go to state 96
    ASS_ADD  shift, and go to state 97
    ASS_SUB  shift, and go to state 98
    ASS_XOR  shift, and go to state 99
    ASS_MOD  shift, and go to state 100
    ASS_SHL  shift, and go to state 101
    ASS_SHR  shift, and go to state 102
    '='      shift, and go to state 103
    '('      shift, and go to state 104

    $default  reduce using rule 82 (BasicElement)


state 50

   80 BasicElement: LITERAL .

    $default  reduce using rule 80 (BasicElement)


state 51

   84 CastExpression: '(' . TypeSpecifier ')' UnaryExpression
   85               | '(' . TypeSpecifier ')' '(' AssignmentExpression ')'
   86               | '(' . TypeSpecifier ')' '(' ConditionalExpression ')'
  109 Expression: '(' . Expression ')'

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26
    OP_INC   shift, and go to state 47
    OP_DEC   shift, and go to state 48
    ID       shift, and go to state 49
    LITERAL  shift, and go to state 50
    '('      shift, and go to state 51
    '!'      shift, and go to state 52

    TypeSpecifier          go to state 105
    TypeName               go to state 28
    MethodCall             go to state 53
    UnaryExpression        go to state 54
    BasicElement           go to state 55
    CastExpression         go to state 56
    ArithmeticExpression   go to state 57
    RelationalExpression   go to state 58
    Expression             go to state 106
    ConditionalExpression  go to state 60
    AssignmentExpression   go to state 61


state 52

   79 UnaryExpression: '!' . BasicElement
  111 ConditionalExpression: '!' . '(' RelationalExpression ')'

    ID       shift, and go to state 92
    LITERAL  shift, and go to state 50
    '('      shift, and go to state 107

    MethodCall    go to state 53
    BasicElement  go to state 108


state 53

   81 BasicElement: MethodCall .

    $default  reduce using rule 81 (BasicElement)


state 54

   83 CastExpression: UnaryExpression .

    $default  reduce using rule 83 (CastExpression)


state 55

   76 UnaryExpression: BasicElement . OP_INC
   77                | BasicElement . OP_DEC
   78                | BasicElement .

    OP_INC  shift, and go to state 109
    OP_DEC  shift, and go to state 110

    $default  reduce using rule 78 (UnaryExpression)


state 56

   87 ArithmeticExpression: CastExpression .

    $default  reduce using rule 87 (ArithmeticExpression)


state 57

   88 ArithmeticExpression: ArithmeticExpression . '+' ArithmeticExpression
   89                     | ArithmeticExpression . '-' ArithmeticExpression
   90                     | ArithmeticExpression . '/' ArithmeticExpression
   91                     | ArithmeticExpression . '*' ArithmeticExpression
   92                     | ArithmeticExpression . '%' ArithmeticExpression
   93                     | ArithmeticExpression . OP_SHL ArithmeticExpression
   94                     | ArithmeticExpression . OP_SHR ArithmeticExpression
   95 RelationalExpression: ArithmeticExpression .
   96                     | ArithmeticExpression . '<' RelationalExpression
   97                     | ArithmeticExpression . '>' RelationalExpression
   98                     | ArithmeticExpression . OP_LESS_EQUAL RelationalExpression
   99                     | ArithmeticExpression . OP_GREATER_EQUAL RelationalExpression
  100                     | ArithmeticExpression . OP_EQUAL RelationalExpression
  101                     | ArithmeticExpression . OP_DIFFERENT RelationalExpression
  102                     | ArithmeticExpression . '&' RelationalExpression
  103                     | ArithmeticExpression . '^' RelationalExpression
  104                     | ArithmeticExpression . '|' RelationalExpression
  105                     | ArithmeticExpression . OP_AND RelationalExpression
  106                     | ArithmeticExpression . OP_OR RelationalExpression

    OP_SHL            shift, and go to state 111
    OP_SHR            shift, and go to state 112
    OP_GREATER_EQUAL  shift, and go to state 113
    OP_LESS_EQUAL     shift, and go to state 114
    OP_EQUAL          shift, and go to state 115
    OP_DIFFERENT      shift, and go to state 116
    OP_AND            shift, and go to state 117
    OP_OR             shift, and go to state 118
    '|'               shift, and go to state 119
    '^'               shift, and go to state 120
    '&'               shift, and go to state 121
    '>'               shift, and go to state 122
    '<'               shift, and go to state 123
    '-'               shift, and go to state 124
    '+'               shift, and go to state 125
    '*'               shift, and go to state 126
    '/'               shift, and go to state 127
    '%'               shift, and go to state 128

    $default  reduce using rule 95 (RelationalExpression)


state 58

  110 ConditionalExpression: RelationalExpression .
  112                      | RelationalExpression . '?' Expression ':' Expression

    '?'  shift, and go to state 129

    $default  reduce using rule 110 (ConditionalExpression)


state 59

   25 VariableDeclarator: ID '=' Expression .

    $default  reduce using rule 25 (VariableDeclarator)


state 60

  107 Expression: ConditionalExpression .

    $default  reduce using rule 107 (Expression)


state 61

  108 Expression: AssignmentExpression .

    $default  reduce using rule 108 (Expression)


state 62

   29 MethodDeclarator: ID '(' ')' .

    $default  reduce using rule 29 (MethodDeclarator)


state 63

   32 Parameter: TypeSpecifier . ID

    ID  shift, and go to state 130


state 64

   28 MethodDeclarator: ID '(' ParameterList . ')'
   31 ParameterList: ParameterList . ',' Parameter

    ')'  shift, and go to state 131
    ','  shift, and go to state 132


state 65

   30 ParameterList: Parameter .

    $default  reduce using rule 30 (ParameterList)


state 66

   24 VariableDeclarator: ID .
   25                   | ID . '=' Expression

    '='  shift, and go to state 41

    $default  reduce using rule 24 (VariableDeclarator)


state 67

   23 VariableDeclarators: VariableDeclarators ',' VariableDeclarator .

    $default  reduce using rule 23 (VariableDeclarators)


state 68

   66 JumpStatement: BREAK . ID ';'
   67              | BREAK . ';'

    ID   shift, and go to state 133
    ';'  shift, and go to state 134


state 69

   48 LabeledStatement: CASE . ConditionalExpression ':' LocalVariableDeclarationOrStatement

    OP_INC   shift, and go to state 47
    OP_DEC   shift, and go to state 48
    ID       shift, and go to state 92
    LITERAL  shift, and go to state 50
    '('      shift, and go to state 135
    '!'      shift, and go to state 52

    MethodCall             go to state 53
    UnaryExpression        go to state 54
    BasicElement           go to state 55
    CastExpression         go to state 56
    ArithmeticExpression   go to state 57
    RelationalExpression   go to state 58
    ConditionalExpression  go to state 136


state 70

   68 JumpStatement: CONTINUE . ID ';'
   69              | CONTINUE . ';'

    ID   shift, and go to state 137
    ';'  shift, and go to state 138


state 71

   49 LabeledStatement: DEFAULT . ':' LocalVariableDeclarationOrStatement

    ':'  shift, and go to state 139


state 72

   54 IterationStatement: DO . Statement WHILE '(' Expression ')' ';'

    BREAK     shift, and go to state 68
    CASE      shift, and go to state 69
    CONTINUE  shift, and go to state 70
    DEFAULT   shift, and go to state 71
    DO        shift, and go to state 72
    FOR       shift, and go to state 73
    IF        shift, and go to state 74
    RETURN    shift, and go to state 75
    SWITCH    shift, and go to state 76
    WHILE     shift, and go to state 77
    OP_INC    shift, and go to state 47
    OP_DEC    shift, and go to state 48
    ID        shift, and go to state 78
    LITERAL   shift, and go to state 50
    '('       shift, and go to state 51
    '!'       shift, and go to state 52
    '{'       shift, and go to state 44
    ';'       shift, and go to state 80

    Block                  go to state 82
    Statement              go to state 140
    LabeledStatement       go to state 87
    SelectionStatement     go to state 88
    IterationStatement     go to state 89
    JumpStatement          go to state 90
    MethodCall             go to state 53
    UnaryExpression        go to state 54
    BasicElement           go to state 55
    CastExpression         go to state 56
    ArithmeticExpression   go to state 57
    RelationalExpression   go to state 58
    Expression             go to state 91
    ConditionalExpression  go to state 60
    AssignmentExpression   go to state 61


state 73

   55 IterationStatement: FOR . '(' ForInit ForExpr Expressions ')' Statement
   56                   | FOR . '(' ForInit ForExpr ')' Statement

    '('  shift, and go to state 141


state 74

   50 SelectionStatement: IF . '(' Expression ')' Statement ELSE Statement
   51                   | IF . '(' Expression ')' Statement

    '('  shift, and go to state 142


state 75

   70 JumpStatement: RETURN . Expression ';'
   71              | RETURN . ';'

    OP_INC   shift, and go to state 47
    OP_DEC   shift, and go to state 48
    ID       shift, and go to state 49
    LITERAL  shift, and go to state 50
    '('      shift, and go to state 51
    '!'      shift, and go to state 52
    ';'      shift, and go to state 143

    MethodCall             go to state 53
    UnaryExpression        go to state 54
    BasicElement           go to state 55
    CastExpression         go to state 56
    ArithmeticExpression   go to state 57
    RelationalExpression   go to state 58
    Expression             go to state 144
    ConditionalExpression  go to state 60
    AssignmentExpression   go to state 61


state 76

   52 SelectionStatement: SWITCH . '(' Expression ')' Block

    '('  shift, and go to state 145


state 77

   53 IterationStatement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 146


state 78

   47 LabeledStatement: ID . ':' LocalVariableDeclarationOrStatement
   72 MethodCall: ID . '(' Expressions ')'
   73           | ID . '(' ')'
   82 BasicElement: ID .
  113 AssignmentExpression: ID . '=' Expression
  114                     | ID . ASS_MUL Expression
  115                     | ID . ASS_DIV Expression
  116                     | ID . ASS_ADD Expression
  117                     | ID . ASS_SUB Expression
  118                     | ID . ASS_XOR Expression
  119                     | ID . ASS_MOD Expression
  120                     | ID . ASS_SHL Expression
  121                     | ID . ASS_SHR Expression

    ASS_MUL  shift, and go to state 95
    ASS_DIV  shift, and go to state 96
    ASS_ADD  shift, and go to state 97
    ASS_SUB  shift, and go to state 98
    ASS_XOR  shift, and go to state 99
    ASS_MOD  shift, and go to state 100
    ASS_SHL  shift, and go to state 101
    ASS_SHR  shift, and go to state 102
    '='      shift, and go to state 103
    '('      shift, and go to state 104
    ':'      shift, and go to state 147

    $default  reduce using rule 82 (BasicElement)


state 79

   34 Block: '{' '}' .

    $default  reduce using rule 34 (Block)


state 80

   46 Statement: ';' .

    $default  reduce using rule 46 (Statement)


state 81

   39 LocalVariableDeclarationStatement: TypeSpecifier . VariableDeclarators ';'

    ID  shift, and go to state 66

    VariableDeclarators  go to state 148
    VariableDeclarator   go to state 36


state 82

   45 Statement: Block .

    $default  reduce using rule 45 (Statement)


state 83

   33 Block: '{' LocalVariableDeclarationsAndStatements . '}'
   36 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationsAndStatements . LocalVariableDeclarationOrStatement
